[package]
name = "actix_sample"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenv = "0.15"  # for loading environment variables
config = "0.14"
serde = { version = "1.0.214", features = ["derive"] }  # for managing configuration from files and environment
serde_json = "1.0"

[dev-dependencies]
actix-rt = "2.5" # Required for asynchronous testing
